[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu/BaseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/MainUITheme.tres" type="Theme" id=2]
[ext_resource path="res://MainMenu/SettingsUI.gd" type="Script" id=3]
[ext_resource path="res://MainMenu/ControlsContainer.gd" type="Script" id=4]
[ext_resource path="res://MainMenu/UIButtonBase.tscn" type="PackedScene" id=5]

[node name="SettingsUI" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Title" parent="MarginContainer/MenuContainer" index="0"]
text = "Settings"

[node name="InputTitle" type="Label" parent="MarginContainer/MenuContainer" index="1" groups=["TransitionTarget"]]
margin_right = 984.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "Input Mapping"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MenuContainer" index="2"]
margin_right = 984.0
margin_bottom = 200.0
scroll_horizontal_enabled = false

[node name="ControlsContainer" type="Container" parent="MarginContainer/MenuContainer/ScrollContainer" index="0"]
margin_right = 984.0
margin_bottom = 500.0
rect_min_size = Vector2( 984, 500 )
script = ExtResource( 4 )

[node name="CooldownTimer" type="Timer" parent="MarginContainer/MenuContainer/ScrollContainer" index="1"]
one_shot = true

[node name="DefaultControls" parent="MarginContainer/MenuContainer" index="3" groups=["TransitionTarget"] instance=ExtResource( 5 )]
margin_right = 984.0
margin_bottom = 23.0
text = "Restore Default Mapping"

[node name="BackButtonHolder" type="Control" parent="MarginContainer" index="1"]
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2

[node name="BackButton" parent="MarginContainer/BackButtonHolder" index="0" groups=["Buttons", "TransitionTarget"] instance=ExtResource( 5 )]
margin_top = 537.0
margin_right = 39.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 23 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="ScrollTween" type="Tween" parent="." index="2"]

[connection signal="appearing" from="." to="." method="_on_SettingsUI_appearing"]
[connection signal="disappearing" from="." to="." method="_on_SettingsUI_disappearing"]
[connection signal="timeout" from="MarginContainer/MenuContainer/ScrollContainer/CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="pressed" from="MarginContainer/MenuContainer/DefaultControls" to="." method="_on_DefaultControls_pressed"]
[connection signal="pressed" from="MarginContainer/BackButtonHolder/BackButton" to="." method="_on_BackButton_pressed"]
